Fix spacing in data table

--- a/LANCommander.UI/Components/InputGroup/InputGroup.razor.scss
+++ b/LANCommander.UI/Components/InputGroup/InputGroup.razor.scss
@@ -6,4 +6,9 @@
     & > .ant-select {
         width: auto !important;
     }
+    
+    &-addon,
+    &-wrap {
+        width: auto;
+    }
 }
